Use hashSet instead of List